--- a/app/less/image.less
+++ b/app/less/image.less
@@ -1,6 +1,11 @@
 .image {
-    position: relative;
-    right: 25%;
     display: block;
-    height: 100%;
+    width: 100%;
+
+    @media (min-width: 768px){
+        position: relative;
+        right: 25%;
+        height: 100%;
+        width: auto;
+    }
 }
